added mobile support

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
                 <span>Date:</span> 2020
               </div>
               <div class="technology">
-                <span>Technology:</span> { HTML5 . CSS3 . javaScript }
+                <span>Technology:</span> { HTML5 . LESS . javaScript }
               </div>
             </div>
-            <a target="_blank" href="https://dilanjer.github.io/tic-tac-toe/" class="show__project">Show Project</a>
+            <div class="btn">
+              <a target="_blank" href="https://dilanjer.github.io/tic-tac-toe/" class="show__project">Show Project</a>
+            </div>
           </div>
         </div>
 
@@ -53,10 +55,12 @@
                 <span>Date:</span> 2019
               </div>
               <div class="technology">
-                <span>Technology:</span> { HTML5 . CSS3 }
+                <span>Technology:</span> { HTML5 . LESS }
               </div>
             </div>
-            <a target="_blank" href="https://dilanjer.github.io/waxom/" class="show__project">Show Project</a>
+            <div class="btn">
+              <a target="_blank" href="https://dilanjer.github.io/waxom/" class="show__project">Show Project</a>
+            </div>
           </div>
         </div>
 
@@ -72,7 +76,9 @@
                 <span>Technology:</span> { HTML5 . CSS3 }
               </div>
             </div>
-            <a target="_blank" href="https://dilanjer.github.io/minto/" class="show__project">Show Project</a>
+            <div class="btn">
+              <a target="_blank" href="https://dilanjer.github.io/minto/" class="show__project">Show Project</a>
+            </div>
           </div>
         </div>
 
@@ -88,8 +94,10 @@
                 <span>Technology:</span> { HTML5 . CSS3 }
               </div>
             </div>
-            <a target="_blank" href="https://dilanjer.github.io/free-online-shop/" class="show__project">Show
-              Project</a>
+            <div class="btn">
+              <a target="_blank" href="https://dilanjer.github.io/free-online-shop/" class="show__project">Show
+                Project</a>
+            </div>
           </div>
         </div>
 
@@ -105,7 +113,10 @@
                 <span>Technology:</span> { HTML5 . CSS3 }
               </div>
             </div>
-            <a target="_blank" href="https://dilanjer.github.io/simple-project/" class="show__project">Show Project</a>
+            <div class="btn">
+              <a target="_blank" href="https://dilanjer.github.io/simple-project/" class="show__project">Show
+                Project</a>
+            </div>
           </div>
         </div>
 
@@ -121,7 +132,9 @@
                 <span>Technology:</span> { HTML5 . CSS3 }
               </div>
             </div>
-            <a target="_blank" href="https://dilanjer.github.io/startup/" class="show__project">Show Project</a>
+            <div class="btn">
+              <a target="_blank" href="https://dilanjer.github.io/startup/" class="show__project">Show Project</a>
+            </div>
           </div>
         </div>
 
