--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
         <div class="project__item">
           <img src="assets/image/project/tic-tac-toe.png" alt="project image" />
           <div class="content">
-            <div class="info">
-              <span>Project name:</span> Tic tac toe
-              <div class="date">
+            <div class="project__info">
+              <div class="project__name">
+                <span>Project name:</span> Tic tac toe
+              </div>
+              <div class="project__date">
                 <span>Date:</span> 2020
               </div>
-              <div class="technology">
+              <div class="project__technology">
                 <span>Technology:</span> { HTML5 . LESS . javaScript }
               </div>
             </div>
@@ -47,14 +49,36 @@
         </div>
 
         <div class="project__item">
+          <img src="assets/image/project/simple-project.png" alt="project image" />
+          <div class="content">
+            <div class="project__info">
+              <div class="project__name">
+                <span>Project name:</span> Simple Project
+              </div>
+              <div class="project__date">
+                <span>Date:</span> 2020
+              </div>
+              <div class="project__technology">
+                <span>Technology:</span> { HTML5 . LESS }
+              </div>
+            </div>
+            <div class="btn">
+              <a target="_blank" href="https://dilanjer.github.io/simple-project/" class="show__project">Show
+                Project</a>
+            </div>
+          </div>
+        </div>
+        <div class="project__item">
           <img src="assets/image/project/waxom.png" alt="project image" />
           <div class="content">
-            <div class="info">
-              <span>Project name:</span> Waxom
-              <div class="date">
+            <div class="project__info">
+              <div class="project__name">
+                <span>Project name:</span> Waxom
+              </div>
+              <div class="project__date">
                 <span>Date:</span> 2019
               </div>
-              <div class="technology">
+              <div class="project__technology">
                 <span>Technology:</span> { HTML5 . LESS }
               </div>
             </div>
@@ -64,15 +88,18 @@
           </div>
         </div>
 
+
         <div class="project__item">
           <img src="assets/image/project/minto.png" alt="project image" />
           <div class="content">
-            <div class="info">
-              <span>Project name:</span> Minto
-              <div class="date">
+            <div class="project__info">
+              <div class="project__name">
+                <span>Project name:</span> Minto
+              </div>
+              <div class="project__date">
                 <span>Date:</span> 2019
               </div>
-              <div class="technology">
+              <div class="project__technology">
                 <span>Technology:</span> { HTML5 . CSS3 }
               </div>
             </div>
@@ -85,12 +112,14 @@
         <div class="project__item">
           <img src="assets/image/project/online-shop.png" alt="project image" />
           <div class="content">
-            <div class="info">
-              <span>Project name:</span> Online Shop
-              <div class="date">
+            <div class="project__info">
+              <div class="project__name">
+                <span>Project name:</span> Online Shop
+              </div>
+              <div class="project__date">
                 <span>Date:</span> 2019
               </div>
-              <div class="technology">
+              <div class="project__technology">
                 <span>Technology:</span> { HTML5 . CSS3 }
               </div>
             </div>
@@ -102,33 +131,16 @@
         </div>
 
         <div class="project__item">
-          <img src="assets/image/project/simple-project.png" alt="project image" />
-          <div class="content">
-            <div class="info">
-              <span>Project name:</span> Simple Project
-              <div class="date">
-                <span>Date:</span> 2019
-              </div>
-              <div class="technology">
-                <span>Technology:</span> { HTML5 . CSS3 }
-              </div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/simple-project/" class="show__project">Show
-                Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
           <img src="assets/image/project/startup.png" alt="project image" />
           <div class="content">
-            <div class="info">
-              <span>Project name:</span> Startup
-              <div class="date">
+            <div class="project__info">
+              <div class="project__name">
+                <span>Project name:</span> Startup
+              </div>
+              <div class="project__date">
                 <span>Date:</span> 2019
               </div>
-              <div class="technology">
+              <div class="project__technology">
                 <span>Technology:</span> { HTML5 . CSS3 }
               </div>
             </div>
