--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
       <div class="project__items">
 
         <div class="project__item">
+          <img src="assets/image/project/slider.png" alt="project image" />
+          <div class="content">
+            <div class="project__info">
+              <div class="project__name">
+                <span>Project name:</span> Slider
+              </div>
+              <div class="project__date">
+                <span>Date:</span> 2020
+              </div>
+              <div class="project__technology">
+                <span>Technology:</span> { HTML5 . LESS . javaScript }
+              </div>
+            </div>
+            <div class="btn">
+              <a target="_blank" href="https://dilanjer.github.io/slider/" class="show__project">Show Project</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project__item">
           <img src="assets/image/project/tic-tac-toe.png" alt="project image" />
           <div class="content">
             <div class="project__info">
@@ -68,6 +88,7 @@
             </div>
           </div>
         </div>
+
         <div class="project__item">
           <img src="assets/image/project/waxom.png" alt="project image" />
           <div class="content">
@@ -87,7 +108,6 @@
             </div>
           </div>
         </div>
-
 
         <div class="project__item">
           <img src="assets/image/project/minto.png" alt="project image" />
