--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </div>
             </div>
             <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/slider/" class="show__project">Show Project</a>
+              <a target="_blank" href="https://dilanjer.github.io/slider" class="show__project">Show Project</a>
             </div>
           </div>
         </div>
