--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="content">
             <div class="project__info">
               <div class="project__name">
-                <span>Project name:</span> Slider
+                <span>Project name:</span> Slider Constructor
               </div>
               <div class="project__date">
                 <span>Date:</span> 2020
