add email address

--- a/index.html
+++ b/index.html
@@ -1,178 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/style/style.css" />
+    <title>Portfolio</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/style/style.css" />
-  <title>Portfolio</title>
-</head>
-
-<body>
-  <div class="portfolio">
-    <div class="sidebar">
-      <div class="content">
-        <div class="name">Artur</div>
-        <div class="surname">Hovhannisyan</div>
-        <div class="specialization">
-          { HTML5 . CSS3 . javaScript }
+  <body>
+    <div class="portfolio">
+      <div class="sidebar">
+        <div class="content">
+          <div class="name">Artur</div>
+          <div class="surname">Hovhannisyan</div>
+          <div class="specialization">
+            { HTML5 . CSS3 . javaScript }
+          </div>
+          <div class="mail">
+            E-Mail: artur_hovhannisyan@protonmail.com
+          </div>
+          <div class="social">
+            <a target="_blank" href="https://github.com/Dilanjer">
+              <img src="assets/image/social/github.svg" alt="github" />
+            </a>
+          </div>
         </div>
-        <div class="social">
-          <a target="_blank" href="https://github.com/Dilanjer">
-            <img src="assets/image/social/github.svg" alt="">
-          </a>
+      </div>
+      <div class="projects">
+        <div class="project__items">
+          <div class="project__item">
+            <img src="assets/image/project/slider.png" alt="project image" />
+            <div class="content">
+              <div class="project__info">
+                <div class="project__name"><span>Project name:</span> Slider Constructor</div>
+                <div class="project__date"><span>Date:</span> 2020</div>
+                <div class="project__technology"><span>Technology:</span> { HTML5 . LESS . javaScript }</div>
+              </div>
+              <div class="btn">
+                <a target="_blank" href="https://dilanjer.github.io/slider" class="show__project">Show Project</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="project__item">
+            <img src="assets/image/project/tic-tac-toe.png" alt="project image" />
+            <div class="content">
+              <div class="project__info">
+                <div class="project__name"><span>Project name:</span> Tic tac toe</div>
+                <div class="project__date"><span>Date:</span> 2020</div>
+                <div class="project__technology"><span>Technology:</span> { HTML5 . LESS . javaScript }</div>
+              </div>
+              <div class="btn">
+                <a target="_blank" href="https://dilanjer.github.io/tic-tac-toe/" class="show__project">Show Project</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="project__item">
+            <img src="assets/image/project/simple-project.png" alt="project image" />
+            <div class="content">
+              <div class="project__info">
+                <div class="project__name"><span>Project name:</span> Simple Project</div>
+                <div class="project__date"><span>Date:</span> 2020</div>
+                <div class="project__technology"><span>Technology:</span> { HTML5 . LESS }</div>
+              </div>
+              <div class="btn">
+                <a target="_blank" href="https://dilanjer.github.io/simple-project/" class="show__project">Show Project</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="project__item">
+            <img src="assets/image/project/waxom.png" alt="project image" />
+            <div class="content">
+              <div class="project__info">
+                <div class="project__name"><span>Project name:</span> Waxom</div>
+                <div class="project__date"><span>Date:</span> 2019</div>
+                <div class="project__technology"><span>Technology:</span> { HTML5 . LESS }</div>
+              </div>
+              <div class="btn">
+                <a target="_blank" href="https://dilanjer.github.io/waxom/" class="show__project">Show Project</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="project__item">
+            <img src="assets/image/project/minto.png" alt="project image" />
+            <div class="content">
+              <div class="project__info">
+                <div class="project__name"><span>Project name:</span> Minto</div>
+                <div class="project__date"><span>Date:</span> 2019</div>
+                <div class="project__technology"><span>Technology:</span> { HTML5 . CSS3 }</div>
+              </div>
+              <div class="btn">
+                <a target="_blank" href="https://dilanjer.github.io/minto/" class="show__project">Show Project</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="project__item">
+            <img src="assets/image/project/online-shop.png" alt="project image" />
+            <div class="content">
+              <div class="project__info">
+                <div class="project__name"><span>Project name:</span> Online Shop</div>
+                <div class="project__date"><span>Date:</span> 2019</div>
+                <div class="project__technology"><span>Technology:</span> { HTML5 . CSS3 }</div>
+              </div>
+              <div class="btn">
+                <a target="_blank" href="https://dilanjer.github.io/free-online-shop/" class="show__project">Show Project</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="project__item">
+            <img src="assets/image/project/startup.png" alt="project image" />
+            <div class="content">
+              <div class="project__info">
+                <div class="project__name"><span>Project name:</span> Startup</div>
+                <div class="project__date"><span>Date:</span> 2019</div>
+                <div class="project__technology"><span>Technology:</span> { HTML5 . CSS3 }</div>
+              </div>
+              <div class="btn">
+                <a target="_blank" href="https://dilanjer.github.io/startup/" class="show__project">Show Project</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="projects">
-      <div class="project__items">
-
-        <div class="project__item">
-          <img src="assets/image/project/slider.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name">
-                <span>Project name:</span> Slider Constructor
-              </div>
-              <div class="project__date">
-                <span>Date:</span> 2020
-              </div>
-              <div class="project__technology">
-                <span>Technology:</span> { HTML5 . LESS . javaScript }
-              </div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/slider" class="show__project">Show Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
-          <img src="assets/image/project/tic-tac-toe.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name">
-                <span>Project name:</span> Tic tac toe
-              </div>
-              <div class="project__date">
-                <span>Date:</span> 2020
-              </div>
-              <div class="project__technology">
-                <span>Technology:</span> { HTML5 . LESS . javaScript }
-              </div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/tic-tac-toe/" class="show__project">Show Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
-          <img src="assets/image/project/simple-project.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name">
-                <span>Project name:</span> Simple Project
-              </div>
-              <div class="project__date">
-                <span>Date:</span> 2020
-              </div>
-              <div class="project__technology">
-                <span>Technology:</span> { HTML5 . LESS }
-              </div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/simple-project/" class="show__project">Show
-                Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
-          <img src="assets/image/project/waxom.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name">
-                <span>Project name:</span> Waxom
-              </div>
-              <div class="project__date">
-                <span>Date:</span> 2019
-              </div>
-              <div class="project__technology">
-                <span>Technology:</span> { HTML5 . LESS }
-              </div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/waxom/" class="show__project">Show Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
-          <img src="assets/image/project/minto.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name">
-                <span>Project name:</span> Minto
-              </div>
-              <div class="project__date">
-                <span>Date:</span> 2019
-              </div>
-              <div class="project__technology">
-                <span>Technology:</span> { HTML5 . CSS3 }
-              </div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/minto/" class="show__project">Show Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
-          <img src="assets/image/project/online-shop.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name">
-                <span>Project name:</span> Online Shop
-              </div>
-              <div class="project__date">
-                <span>Date:</span> 2019
-              </div>
-              <div class="project__technology">
-                <span>Technology:</span> { HTML5 . CSS3 }
-              </div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/free-online-shop/" class="show__project">Show
-                Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
-          <img src="assets/image/project/startup.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name">
-                <span>Project name:</span> Startup
-              </div>
-              <div class="project__date">
-                <span>Date:</span> 2019
-              </div>
-              <div class="project__technology">
-                <span>Technology:</span> { HTML5 . CSS3 }
-              </div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/startup/" class="show__project">Show Project</a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
