add new project

--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
       <div class="projects">
         <div class="project__items">
           <div class="project__item">
+            <img src="assets/image/project/wireframe.png" alt="project image" />
+            <div class="content">
+              <div class="project__info">
+                <div class="project__name"><span>Project name:</span> Wireframe</div>
+                <div class="project__date"><span>Date:</span> 2020</div>
+                <div class="project__technology"><span>Technology:</span> { React . SCSS . javaScript }</div>
+              </div>
+              <div class="btn">
+                <a target="_blank" href="https://dilanjer.github.io/wireframe/" class="show__project">Show Project</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="project__item">
             <img src="assets/image/project/slider.png" alt="project image" />
             <div class="content">
               <div class="project__info">
