--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
     <div class="projects">
       <div class="project__items">
         <div class="project__item">
+          <img src="assets/image/project/weather-app.png" alt="project image" />
+          <div class="content">
+            <div class="project__info">
+              <div class="project__name"><span>Project name:</span> Weather App (under development)</div>
+              <div class="project__date"><span>Date:</span> 2020</div>
+              <div class="project__technology"><span>Technology:</span> { HTML5 . SCSS . javaScript}</div>
+            </div>
+            <div class="btn">
+              <a target="_blank" href="https://dilanjer.github.io/weather-app/" class="show__project">Show Project</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project__item">
           <img src="assets/image/project/waxom.png" alt="project image" />
           <div class="content">
             <div class="project__info">
