--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
     </div>
     <div class="projects">
       <div class="project__items">
+
+        <div class="project__item">
+          <img src="assets/image/project/todo.png" alt="project image" />
+          <div class="content">
+            <div class="project__info">
+              <div class="project__name"><span>Project name:</span> ToDo List</div>
+              <div class="project__date"><span>Date:</span> 2020</div>
+              <div class="project__technology"><span>Technology:</span> { HTML5 . LESS . javaScript}</div>
+            </div>
+            <div class="btn">
+              <a target="_blank" href="https://dilanjer.github.io/todo/" class="show__project">Show Project</a>
+            </div>
+          </div>
+        </div>
+
         <div class="project__item">
           <img src="assets/image/project/weather-app.png" alt="project image" />
           <div class="content">
