remove old projects

--- a/index.html
+++ b/index.html
@@ -68,38 +68,11 @@
               <div class="project__technology"><span>Technology:</span> { HTML5 . LESS . javaScript}</div>
             </div>
             <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/new-waxom/" class="show__project">Show Project</a>
+              <a target="_blank" href="https://dilanjer.github.io/waxom/" class="show__project">Show Project</a>
             </div>
           </div>
         </div>
 
-        <div class="project__item">
-          <img src="assets/image/project/wireframe.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name"><span>Project name:</span> Wireframe</div>
-              <div class="project__date"><span>Date:</span> 2020</div>
-              <div class="project__technology"><span>Technology:</span> { React . SCSS . javaScript }</div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/wireframe/" class="show__project">Show Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
-          <img src="assets/image/project/slider.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name"><span>Project name:</span> Slider Constructor</div>
-              <div class="project__date"><span>Date:</span> 2020</div>
-              <div class="project__technology"><span>Technology:</span> { HTML5 . LESS . javaScript }</div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/slider" class="show__project">Show Project</a>
-            </div>
-          </div>
-        </div>
 
         <div class="project__item">
           <img src="assets/image/project/tic-tac-toe.png" alt="project image" />
@@ -115,63 +88,6 @@
           </div>
         </div>
 
-        <div class="project__item">
-          <img src="assets/image/project/simple-project.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name"><span>Project name:</span> Simple Project</div>
-              <div class="project__date"><span>Date:</span> 2020</div>
-              <div class="project__technology"><span>Technology:</span> { HTML5 . LESS }</div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/simple-project/" class="show__project">Show
-                Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
-          <img src="assets/image/project/minto.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name"><span>Project name:</span> Minto</div>
-              <div class="project__date"><span>Date:</span> 2019</div>
-              <div class="project__technology"><span>Technology:</span> { HTML5 . CSS3 }</div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/minto/" class="show__project">Show Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
-          <img src="assets/image/project/online-shop.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name"><span>Project name:</span> Online Shop</div>
-              <div class="project__date"><span>Date:</span> 2019</div>
-              <div class="project__technology"><span>Technology:</span> { HTML5 . CSS3 }</div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/free-online-shop/" class="show__project">Show
-                Project</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="project__item">
-          <img src="assets/image/project/startup.png" alt="project image" />
-          <div class="content">
-            <div class="project__info">
-              <div class="project__name"><span>Project name:</span> Startup</div>
-              <div class="project__date"><span>Date:</span> 2019</div>
-              <div class="project__technology"><span>Technology:</span> { HTML5 . CSS3 }</div>
-            </div>
-            <div class="btn">
-              <a target="_blank" href="https://dilanjer.github.io/startup/" class="show__project">Show Project</a>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
